<resources>
    <string name="app_name">Food</string>
    <string name="add_food">Add food</string>
    <string name="hint_food">Food</string>
    <string name="kcal">%d Kcal</string>
    <string name="calories">Calories</string>
    <string name="bt_add">Add</string>
    <string name="list_of_items">List of items</string>
    <string name="vegetable">Vegetable</string>
    <string name="meat">Meat</string>
    <string name="fruit">Fruit</string>
</resources>