<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/add_item"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_food"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/txt_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_food"
            android:inputType="text"
            android:layout_marginVertical="10dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_kcal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/calories"
                android:textSize="20sp"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                android:layout_weight="5"/>

            <View
                android:layout_width="2dp"
                android:layout_height="5dp"/>

            <Spinner
                android:id="@+id/sp_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

        <Button
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_add"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingHorizontal="20dp"
        android:paddingBottom="0dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/list_of_items"
            android:textSize="20sp"
            android:layout_marginVertical="10dp"
            android:textColor="@color/app_top"
            />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_foods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
</LinearLayout>